--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^6.3.1",
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@types/node": "^18.7.16",
@@ -21,12 +22,15 @@
     "@types/webpack": "^5.28.0",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "5.5.x",
     "mini-css-extract-plugin": "^2.6.1",
+    "react-refresh": "^0.14.0",
+    "react-refresh-typescript": "^2.0.7",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.3.1",
+    "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
     "url-loader": "^4.1.1",
