--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "webpack serve --env mode=development --env port=3000",
     "build:dev": "webpack --env mode=development",
     "build": "webpack --env mode=production",
-    "lint": "eslint \"**/*.{ts,tsx}\"",
-    "lint:fix": "eslint --fix \"**/*.{ts,tsx}\""
+    "lint:ts": "eslint \"**/*.{ts,tsx}\"",
+    "lint:ts:fix": "eslint --fix \"**/*.{ts,tsx}\"",
+    "lint:css": "npx stylelint \"**/*.sass\"",
+    "lint:css:fix": "npx stylelint \"**/*.sass\" --fix"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +33,7 @@
     "css-loader": "^6.7.1",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-i18next": "^6.0.0-4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.0.1",
@@ -40,11 +43,17 @@
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "5.5.x",
     "mini-css-extract-plugin": "^2.6.1",
+    "postcss-sass": "^0.5.0",
     "react-refresh": "^0.14.0",
     "react-refresh-typescript": "^2.0.7",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "stylelint": "^14.12.1",
+    "stylelint-config-recommended-scss": "^7.0.0",
+    "stylelint-config-standard": "^28.0.0",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-scss": "^4.3.0",
     "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
@@ -62,6 +71,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "stylelint-config-recommended": "^9.0.0"
   }
 }
