--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "eslint --fix \"**/*.{ts,tsx}\"",
     "lint:css": "npx stylelint \"**/*.sass\"",
-    "lint:css:fix": "npx stylelint \"**/*.sass\" --fix"
+    "lint:css:fix": "npx stylelint \"**/*.sass\" --fix",
+    "test": "jest --config ./config/jest/jest.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +19,11 @@
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
+    "@babel/preset-typescript": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^6.3.1",
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
+    "@types/jest": "^29.0.3",
     "@types/node": "^18.7.16",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
@@ -28,6 +31,7 @@
     "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
+    "babel-jest": "^29.0.3",
     "babel-loader": "^8.2.5",
     "babel-plugin-i18next-extract": "^0.9.0",
     "css-loader": "^6.7.1",
@@ -42,6 +46,9 @@
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "5.5.x",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
+    "jest-localstorage-mock": "^2.4.22",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-sass": "^0.5.0",
     "react-refresh": "^0.14.0",
