--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@typescript-eslint/parser": "^5.38.0",
     "babel-jest": "^29.0.3",
     "babel-loader": "^8.2.5",
-    "babel-plugin-i18next-extract": "^0.9.0",
+    "babel-plugin-i18next-extract": "0.8.3",
     "css-loader": "^6.7.1",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
