--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,6 @@
     "./config/jest/setupTests.ts",
     "./src/**/*.ts",
     "./src/**/*.tsx",
+    "./config/storybook/webpack.config.ts",
   ]
 }
