--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
     "jest-localstorage-mock": "^2.4.22",
+    "loki": "^0.30.3",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-sass": "^0.5.0",
     "react-refresh": "^0.14.0",
@@ -102,5 +103,20 @@
     "react-i18next": "^11.18.6",
     "react-router-dom": "^6.2.1",
     "stylelint-config-recommended": "^9.0.0"
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.app",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "chrome.iphone7": {
+        "target": "chrome.app",
+        "preset": "iPhone 7"
+      }
+    }
   }
 }
