--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-transition-group": "^4.4.5",
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.4.2",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
@@ -108,6 +109,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
     "react-router-dom": "^6.2.1",
+    "react-transition-group": "^4.4.5",
     "stylelint-config-recommended": "^9.0.0"
   },
   "loki": {
