--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "start": "webpack serve --env mode=development --env port=3000",
+    "start:json-server": "node ./json-server/index.js",
     "build:dev": "webpack --env mode=development",
     "analyze": "cross-env analyze=1 webpack --env mode=development",
     "build": "webpack --env mode=production",
@@ -75,6 +76,7 @@
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
     "jest-localstorage-mock": "^2.4.22",
+    "json-server": "^0.17.0",
     "loki": "^0.30.3",
     "looks-same": "^8.0.1",
     "mini-css-extract-plugin": "^2.6.1",
@@ -100,16 +102,20 @@
     "webpack-dev-server": "^4.11.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "classnames": "^2.3.2",
     "i18next": "^21.9.2",
     "i18next-browser-languagedetector": "^6.1.5",
     "i18next-http-backend": "^1.4.4",
+    "jsonwebtoken": "^8.5.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.2.1",
     "react-transition-group": "^4.4.5",
+    "redux": "^4.2.0",
     "stylelint-config-recommended": "^9.0.0"
   }
 }
