--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-jest": "^29.0.3",
     "babel-loader": "^8.2.5",
     "babel-plugin-i18next-extract": "0.8.3",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "eslint": "^8.24.0",
@@ -73,6 +74,7 @@
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "5.5.x",
+    "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
@@ -100,11 +102,11 @@
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.0",
-    "husky": "^8.0.0"
+    "webpack-dev-server": "^4.11.0"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^1.1.2",
     "classnames": "^2.3.2",
     "i18next": "^21.9.2",
     "i18next-browser-languagedetector": "^6.1.5",
