--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "looks-same": "^8.0.1",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-sass": "^0.5.0",
+    "react-hot-loader": "^4.13.0",
     "react-refresh": "^0.14.0",
     "react-refresh-typescript": "^2.0.7",
     "reg-cli": "^0.17.7",
